# simple-fastapi

./: LICENSE  README.md  pyproject.toml
src/fastapi_ms_init/: __init__.py  cli.py  config.py  errors.py  generator.py  validators.py
src/fastapi_ms_init/templates/base/: .gitignore.j2  Dockerfile.j2  README.md.j2  docker-compose.yml.j2  pyproject.toml.j2
src/fastapi_ms_init/templates/base/app/: __init__.py.j2  main.py.j2
src/fastapi_ms_init/templates/base/app/api/: __init__.py.j2  routes.py.j2
src/fastapi_ms_init/templates/base/app/core/: __init__.py.j2  logging.py.j2  settings.py.j2
src/fastapi_ms_init/templates/base/tests/: __init__.py.j2  conftest.py.j2  test_main.py.j2  test_routes.py.j2
tests/: __init__.py  conftest.py
tests/contract/: test_generated_structure.py
tests/integration/: test_minimal_generation.py
tests/unit/: test_cli.py  test_config.py  test_errors.py  test_generator.py  test_validators.py
